add jvm to setup and update nvim plugins